# Flavors

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix  shell.nix
flavors-client/: CMakeLists.txt  main.qml  qml.qrc
flavors-client/components/: LoginPage.qml  UserPage.qml
flavors-client/include/: client.h
flavors-client/src/: client.cpp  main.cpp
flavors-migration/: pyproject.toml
flavors-migration/migration/: __main__.py
flavors-nlp/: pyproject.toml
flavors-nlp/flavors-nlp/: __main__.py
flavors-nlp/flavors_nlp/: __init__.py  __main__.py
flavors-scripts/migration/: pyproject.toml
flavors-scripts/migration/migration/: __main__.py
flavors-server/: CMakeLists.txt  Gemfile  Rakefile  app.rb  config.ru  package.yaml  public.pem  stack.yaml
flavors-server/app/: schema.rb  server.rb
flavors-server/app/handlers/: register_handler.rb
flavors-server/app/middlewares/: jwt_middleware.rb
flavors-server/app/models/: ingredient.rb  recipe.rb  times.rb
flavors-server/assets/: recipes.json  schema.gql  schema.sql
flavors-server/assets/raw/: recipes.json
flavors-server/config/: database.yml
flavors-server/db/: schema.rb  seeds.rb
flavors-server/db/migrate/: 20240314235815_create_recipes.rb  20240315000536_create_ingredients.rb  20240315000606_create_steps.rb  20240315000642_create_recipe_times.rb  20240315000642_create_times.rb  20240409144429_create_users.rb  20240410231005_create_users.rb
flavors-server/db/raw/: recipes.json
flavors-server/graphql/: schema.rb
flavors-server/graphql/types/: ingredient_type.rb  recipe_type.rb  times_type.rb  user_type.rb
flavors-server/graphql/types/inputs/: filter_type.rb  times_type.rb  users_type.rb
flavors-server/lib/: FlavorsServer.hs  auth.rb
flavors-server/middleware/: authenticate.rb
flavors-server/migration/: pyproject.toml
flavors-server/models/: recipe.rb  recipe_time.rb  times.rb  user.rb
flavors-server/src/: Main.hs
flavors-server/src/Server/: API.hs  Utils.hs
flavors-server/utils/: migrate.rb  rsa.rb
